Fixed styles for absolute images

--- a/src/styl/partials/navbar.styl
+++ b/src/styl/partials/navbar.styl
@@ -20,9 +20,10 @@
 
   &-scroll
     align-items center
-    background-color green
+    background-color $blue
     box-shadow 0 6px 8px 0 rgba(0,0,0,0.2)
-    height 100px
+    height 114px
+    padding 0 69px 0 73px
 
   &-option
     font-family "Galano Grotesque"
