--- a/src/styl/vars.styl
+++ b/src/styl/vars.styl
@@ -22,3 +22,9 @@ $extrabold = 800
 $ultrabold = $extrabold
 $black = 900
 $heavy = $black
+
+$lg = "screen and (max-width: 1300px)"
+$sl = "screen and (max-width: 1024px)"
+$md = "screen and (max-width: 992px)"
+$sm = "screen and (max-width: 768px)"
+$xs = "screen and (max-width: 576px)"
