--- a/src/styl/base.styl
+++ b/src/styl/base.styl
@@ -6,12 +6,6 @@ html
   min-height 100%
   position relative
 
-  @media screen and (max-width: 768px)
-    font-size 14.5px
-
-  @media screen and (max-width: 480px)
-    font-size 13px
-
 body
   font-size inherit
   background-color #F9F9F9
@@ -31,6 +25,9 @@ a
   margin 0
   overflow hidden
   padding 0
+
+figure
+  margin 0
 
 // LOADERS //
 .custom-loader
