--- a/src/styl/partials/navbar.styl
+++ b/src/styl/partials/navbar.styl
@@ -17,6 +17,13 @@
     img
       width 100%
       height auto
+    @media $xs
+      display none
+
+    &-mobile
+      display none
+      @media $xs
+        display block
 
   &-scroll
     align-items center
@@ -61,7 +68,7 @@
 .active-section
   color white
 
-@media screen and (max-width: 876px)
+@media $xs
   .navbar
     justify-content space-between
     height 70px
@@ -140,6 +147,3 @@
 
         &:nth-child(2)
           margin 4px 0
-
-        &:last-child
-          width 12px
