--- a/src/templates/partials/navbar.njk
+++ b/src/templates/partials/navbar.njk
@@ -2,6 +2,10 @@
   <div>
     <a href="#">
       <img class="navbar-logo" src="img/logo.svg" alt="Navbar logo">
+      <img src="img/logo-mobile.png"
+           srcset="img/logo-mobile@2x.png 2x,
+             img/logo-mobile@3x.png 3x"
+           class="navbar-logo-mobile">
     </a>
   </div>
   <div class="navbar-option-container">
