--- a/src/templates/partials/navbar.njk
+++ b/src/templates/partials/navbar.njk
@@ -30,33 +30,33 @@
       </div>
     </div>
   </div>
-  <div class="hamburger-menu-container" id="menuContainer" data-attribute="">
-    <div class="hamburger-menu-header" data-attribute="">
-      <div class="" data-attribute="">
-        <a href="#" data-attribute="">
-          <img class="hamburger-logo" src="img/logos/wicore-white-logo.png" data-attribute="" alt="Hamburger menu logo">
-        </a>
-      </div>
-      <div id="hideHamburger">
-        <img class="hamburger-close" src="img/icons/close-menu.png" alt="Close hamburger menu">
-      </div>
-    </div>
-    <div class="hamburger-menu-body nunitosans-regular" data-attribute="">
-      <div class="hamburger-text-container">
-        <a href="#" data-attribute="">
-          <span class="hamburger-text {% if section == 'index' %} hamburger-active {% endif %}">Inicio</span>
-        </a>
-      </div>
-      <div class="hamburger-text-container">
-        <a href="nosotros.html" data-attribute="">
-          <span class="hamburger-text {% if section == 'nosotros' %} hamburger-active {% endif %}">Nosotros</span>
-        </a>
-      </div>
-      <div class="hamburger-text-container">
-        <a href="contacto.html" data-attribute="">
-          <span class="hamburger-text {% if section == 'contacto' %} hamburger-active {% endif %}">Contacto</span>
-        </a>
-      </div>
-    </div>
-  </div>
+<!--  <div class="hamburger-menu-container" id="menuContainer" data-attribute="">-->
+<!--    <div class="hamburger-menu-header" data-attribute="">-->
+<!--      <div class="" data-attribute="">-->
+<!--        <a href="#" data-attribute="">-->
+<!--          <img class="hamburger-logo" src="img/logos/wicore-white-logo.png" data-attribute="" alt="Hamburger menu logo">-->
+<!--        </a>-->
+<!--      </div>-->
+<!--      <div id="hideHamburger">-->
+<!--        <img class="hamburger-close" src="img/icons/close-menu.png" alt="Close hamburger menu">-->
+<!--      </div>-->
+<!--    </div>-->
+<!--    <div class="hamburger-menu-body nunitosans-regular" data-attribute="">-->
+<!--      <div class="hamburger-text-container">-->
+<!--        <a href="#" data-attribute="">-->
+<!--          <span class="hamburger-text {% if section == 'index' %} hamburger-active {% endif %}">Inicio</span>-->
+<!--        </a>-->
+<!--      </div>-->
+<!--      <div class="hamburger-text-container">-->
+<!--        <a href="nosotros.html" data-attribute="">-->
+<!--          <span class="hamburger-text {% if section == 'nosotros' %} hamburger-active {% endif %}">Nosotros</span>-->
+<!--        </a>-->
+<!--      </div>-->
+<!--      <div class="hamburger-text-container">-->
+<!--        <a href="contacto.html" data-attribute="">-->
+<!--          <span class="hamburger-text {% if section == 'contacto' %} hamburger-active {% endif %}">Contacto</span>-->
+<!--        </a>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
 </nav>
