Add SEO and corrections on icons

--- a/src/templates/partials/base.njk
+++ b/src/templates/partials/base.njk
@@ -8,7 +8,7 @@
     {% block extra_css %}{% endblock %}
     <link rel="stylesheet" href="css/{{ projectFilesName }}.libs.css">
     <link rel="stylesheet" href="css/main.css">
-    <title>Prueba - {% block title %}{% endblock %}</title>
+    <title>{% block title %}{% endblock %} | Prescrypto</title>
     {% include 'seo/facebook.njk' %}
   </head>
   <body>
