--- a/src/templates/sections/index.njk
+++ b/src/templates/sections/index.njk
@@ -1,6 +1,6 @@
 {% extends "partials/base.njk" %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Comienza hoy a recetar{% endblock %}
 
 {% block content %}
 <div class="information-background"></div>
@@ -103,26 +103,36 @@
     Lo que dicen de <span>nosotros</span>
   </h2>
   <div class="communication-items">
-    <img src="img/el-economista.png"
-         srcset="img/el-economista@2x.png 2x,
+    <figure class="communication-item">
+      <img src="img/el-economista.png"
+           srcset="img/el-economista@2x.png 2x,
              img/el-economista@3x.png 3x"
-         class="communication-item" alt="El Economista">
-    <img src="img/news-week.png"
-         srcset="img/news-week@2x.png 2x,
+           class="communication-item-img" alt="El Economista">
+    </figure>
+    <figure class="communication-item">
+      <img src="img/news-week.png"
+           srcset="img/news-week@2x.png 2x,
              img/news-week@3x.png 3x"
-         class="communication-item" alt="News Week">
-    <img src="img/fortune.png"
-         srcset="img/fortune@2x.png 2x,
+           class="communication-item-img" alt="News Week">
+    </figure>
+    <figure class="communication-item">
+      <img src="img/fortune.png"
+           srcset="img/fortune@2x.png 2x,
              img/fortune@3x.png 3x"
-         class="communication-item" alt="Fortune">
-    <img src="img/tech-crunch.png"
-         srcset="img/tech-crunch@2x.png 2x,
+           class="communication-item-img" alt="Fortune">
+    </figure>
+    <figure class="communication-item">
+      <img src="img/tech-crunch.png"
+           srcset="img/tech-crunch@2x.png 2x,
              img/tech-crunch@3x.png 3x"
-         class="communication-item" alt="Tech Crunch">
-    <img src="img/500-startups.png"
-         srcset="img/500-startups@2x.png 2x,
+           class="communication-item-img" alt="Tech Crunch">
+    </figure>
+    <figure class="communication-item">
+      <img src="img/500-startups.png"
+           srcset="img/500-startups@2x.png 2x,
              img/500-startups@3x.png 3x"
-         class="communication-item" alt="500 Startups">
+           class="communication-item-img" alt="500 Startups">
+    </figure>
   </div>
 </section>
 <section class="patients">
