--- a/src/styl/sections/index.styl
+++ b/src/styl/sections/index.styl
@@ -17,7 +17,7 @@
     @media $sm
       height 630px
     @media $xs
-      height 352px
+      height 370px
 
   &-title
     margin 0
@@ -340,16 +340,31 @@
     justify-content space-between
     flex-wrap wrap
     @media $sm
-      img
-        &:last-child
-          display none
+      justify-content space-around
+    @media $xs
+      margin 0
+  &-item
+    @media $sm
+      width 33.333%
+      text-align center
+      &:nth-child(n+4)
+        margin-top 17px
     @media $xs
       margin-top 0
+      justify-content space-around
+      width 45%
+      &:nth-child(3)
+        img
+          width 75%
+      &:nth-child(5)
+        img
+          width 85%
+      &:nth-child(n+3)
+        margin-top 17px
       img
-        width 45%
+        width 100%
         height auto
-        &:nth-child(n+3)
-          margin-top 17px
+
 .patients
   background-color rgba(29, 41, 204, 0.84)
   padding 72px 13.75% 88.5px 13.75%
@@ -366,6 +381,9 @@
     @media $sl
       right 5%
       width 36%
+    @media $sm
+      top 50%
+      transform translateY(-50%)
     @media $xs
       position relative
       width 67%
@@ -373,6 +391,7 @@
       top 0
       right 0
       margin 0 auto
+      transform none
   &-title
     font-family "Galano Grotesque"
     font-size remify(50px)
