--- a/src/templates/seo/metatags.njk
+++ b/src/templates/seo/metatags.njk
@@ -1,15 +1,14 @@
 {% block meta %}
   <meta property="og:url" content="http://" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="" />
-  <meta property="og:description" content="" />
+  <meta property="og:title" content="Comienza hoy a recetar | Prescrypto" />
+  <meta property="og:description" content="Plataforma gratuita para generar y guardar recetas médicas" />
   <meta property="og:image" content="http://" />
   <meta property="og:image:width" content="" />
   <meta property="og:image:height" content="" />
 
-  <meta name="title" content="" />
-  <meta name="keywords" content="">
-  <meta name="description" content="" />
+  <meta name="title" content="Comienza hoy a recetar | Prescrypto" />
+  <meta name="description" content="Plataforma gratuita para generar y guardar recetas médicas" />
 
   <link runat="server" rel="shortcut icon" href="img/prueba-favicon.png" type="image/x-icon"/>
   <link runat="server" rel="icon" href="img/prueba-favicon.png" type="image/ico"/>
