Add desktop corrections

--- a/src/styl/base.styl
+++ b/src/styl/base.styl
@@ -5,6 +5,7 @@ html
   font-size unit($baseFontSize, 'px')
   min-height 100%
   position relative
+  font-family "Galano Grotesque"
 
 body
   font-size inherit
