--- a/src/templates/partials/navbar.njk
+++ b/src/templates/partials/navbar.njk
@@ -11,7 +11,7 @@
   <div class="navbar-option-container">
     <div class="navbar-option-content">
       <a href="#">
-        <span class="navbar-option login">Iniciar Sesión</span>
+        <span class="navbar-option login">Iniciar sesión</span>
       </a>
     </div>
     <div class="navbar-option-content">
