--- a/src/templates/sections/index.njk
+++ b/src/templates/sections/index.njk
@@ -30,7 +30,7 @@
           Consulta
         </div>
         <div class="easy-card-text">
-          Consulta un gran catálogo de medicamentos
+          Consulta un gran <br>catálogo de <br>medicamentos
         </div>
       </div>
       <div class="easy-card">
@@ -41,7 +41,8 @@
           Guarda
         </div>
         <div class="easy-card-text">
-          Guarda en tu historial todas tus Recetas emitidas
+          Guarda en tu historial <br>
+          todas tus Recetas emitidas
         </div>
       </div>
       <div class="easy-card">
@@ -52,7 +53,8 @@
           Genera
         </div>
         <div class="easy-card-text">
-          Genera plantillas de tus recetas favoritas
+          Genera plantillas de tus <br>
+          recetas favoritas
         </div>
       </div>
       <div class="easy-card">
@@ -63,11 +65,17 @@
           Protege
         </div>
         <div class="easy-card-text">
-          Protege tus recetas médicas de forma segura con nuestra tecnología
+          Protege tus recetas <br>
+          médicas de forma segura <br>
+          con nuestra tecnología
         </div>
       </div>
     </div>
     <a href="#" class="prescrypto-btn reverse easy-btn">Registrarme</a>
+    <img src="img/ball-bg.png"
+         srcset="img/ball-bg@2x.png 2x,
+             img/ball-bg@3x.png 3x"
+         class="easy-bg-image" alt="Section Background">
   </div>
 </section>
 <section class="doctor">
@@ -93,7 +101,7 @@
         <span>Dr. Edson Lópex</span>
       </div>
       <div class="doctor-grade">
-        Cirjuano plástico
+        Cirjuano
       </div>
     </div>
   </div>
