--- a/src/templates/seo/metatags.njk
+++ b/src/templates/seo/metatags.njk
@@ -10,6 +10,6 @@
   <meta name="title" content="Comienza hoy a recetar | Prescrypto" />
   <meta name="description" content="Plataforma gratuita para generar y guardar recetas médicas" />
 
-  <link runat="server" rel="shortcut icon" href="img/prueba-favicon.png" type="image/x-icon"/>
-  <link runat="server" rel="icon" href="img/prueba-favicon.png" type="image/ico"/>
+  <link runat="server" rel="shortcut icon" href="img/favicon.png" type="image/x-icon"/>
+  <link runat="server" rel="icon" href="img/favicon.png" type="image/ico"/>
 {% endblock %}
