--- a/src/styl/partials/navbar.styl
+++ b/src/styl/partials/navbar.styl
@@ -2,7 +2,6 @@
   align-items center
   background-color transparent
   display flex
-  height 114px
   justify-content space-between
   left 0
   padding 62px 69px 0 73px
@@ -29,9 +28,10 @@
     align-items center
     background-color $blue
     box-shadow 0 6px 8px 0 rgba(0,0,0,0.2)
-    height 114px
+    height 90px
     padding 0 69px 0 73px
-
+    & > div > a > .navbar-logo
+      margin-top 15px
   &-option
     font-family "Galano Grotesque"
     font-size remify(15)
