Add movile corrections

--- a/src/styl/partials/navbar.styl
+++ b/src/styl/partials/navbar.styl
@@ -90,8 +90,8 @@
       position initial
 
     &-logo
-      height 20px
-      width 94px
+      height auto
+      width auto
 
     &-close
       height 16px
@@ -99,10 +99,10 @@
 
     &-menu
       &-container
-        background-color gray
+        background-color $blue
         display inline
         bottom 0
-        left 0
+        right  0
         overflow scroll
         padding-bottom 50px
         position fixed
@@ -128,11 +128,6 @@
 
       &-container
         margin 35px 0
-
-    &-active,
-    &-text:hover
-      font-weight bold
-      text-decoration underline
 
     &-line
       &-icon
