--- a/src/templates/sections/index.njk
+++ b/src/templates/sections/index.njk
@@ -13,7 +13,7 @@
   </p>
   <form class="information-form">
     <input type="email" class="information-form-input" name="email" placeholder="Correo electrónico">
-    <button type="button" class="prescrypto-btn">Registrarme</button>
+    <button type="button" class="prescrypto-btn information-form-btn">Registrarme</button>
   </form>
   <img src="img/computer.png"
        srcset="img/computer@2x.png 2x,
