--- a/src/templates/partials/navbar.njk
+++ b/src/templates/partials/navbar.njk
@@ -52,7 +52,7 @@
       </div>
       <div class="hamburger-text-container">
         <a href="#" data-attribute="">
-          <span class="hamburger-text">Registrarse</span>
+          <span class="hamburger-text">Registrarme</span>
         </a>
       </div>
     </div>
