--- a/src/templates/sections/index.njk
+++ b/src/templates/sections/index.njk
@@ -78,6 +78,7 @@
          class="easy-bg-image" alt="Section Background">
   </div>
 </section>
+<div class="video-container"><iframe width="853" height="480" src="https://www.youtube.com/embed/LXb3EKWsInQ" frameborder="0" allowfullscreen></iframe></div>
 <section class="doctor">
   <figure class="doctor-img">
     <img src="img/doctor.png" alt="Doctor"
@@ -101,7 +102,7 @@
         <span>Dr. Edson Lópex</span>
       </div>
       <div class="doctor-grade">
-        Cirjuano
+        Cirujano
       </div>
     </div>
   </div>
