--- a/src/styl/sections/index.styl
+++ b/src/styl/sections/index.styl
@@ -9,16 +9,16 @@
     background-image url('../img/cover-azul@2x.jpg')
     background-position center center
     background-size cover
-    height 93.333vh
-    max-height 840px
+    height 840px
     width 100%
-    @media screen and (min-height: 1280px)
-      max-height 700px
-    @media $sm
-      height 630px
+    @media screen and (max-width: 1270px)
+      height 800px
+    @media screen and (max-width: 1100px)
+      height 780px
+    @media screen and (max-width: 900px)
+      height 730px
     @media $xs
-      height 370px
-
+      height 384px
   &-title
     margin 0
     font-size remify(58)
@@ -103,8 +103,11 @@
     display block
     margin 30px auto 0 auto
     width 65.4166%
-    @media $xs
+    @media $sl
+      width 80%
+    @media $sm
       width 90.9375%
+
 .easy
   text-align center
   padding 0 12.3611% 66px 9.3055%
@@ -132,6 +135,8 @@
         width 60%
     @media $sl
       margin-top 20px
+    @media $xs
+      margin-top 0
   &-cards
     width 100%
     display flex
@@ -237,13 +242,25 @@
     bottom -220px
     @media $xs
       display none
+.video-container
+  position relative
+  padding-bottom 34.35%
+  padding-top 25px
+  height 0
+  iframe
+    position absolute
+    top 0
+    left 0
+    width 100%
+    height 100%
+
 .doctor
   background-image url('../img/doctor-bg@2x.png')
   background-position center center
   background-size cover
   display flex
   align-items flex-start
-  padding 110px 13.75% 97px 13.75%
+  padding 100px 13.75% 97px 13.75%
   justify-content space-between
   @media $sl
     padding 110px 5% 97px 6%
@@ -281,7 +298,7 @@
     @media $xs
       flex-basis 100%
       margin-top 15px
-      padding 0 10px 0 20px
+      padding 0 30px
 
   &-title
     margin 0
@@ -430,7 +447,7 @@
       font-size remify(40)
     @media $xs
       font-size remify(25)
-      line-height 2.24
+      line-height 1.3
       letter-spacing -0.1px
       text-align center
   &-subtitle
