--- a/src/styl/utils.styl
+++ b/src/styl/utils.styl
@@ -2,6 +2,7 @@
   &-btn
     border-radius 6px
     border solid 1px #ffffff
+    cursor pointer
     padding 13.3px 27.7px 12.5px 28.5px
     font-family "Galano Grotesque"
     font-size remify(15)
