--- a/src/styl/sections/index.styl
+++ b/src/styl/sections/index.styl
@@ -97,24 +97,63 @@
         padding 10px 25.2px 11.7px 13.1px
         margin-right 6px
     &-btn
+      &:hover
+        background-color transparent
+        color #ffffff
+
       @media $xs
         font-size remify(12)
   &-image
     display block
-    margin 30px auto 0 auto
-    width 65.4166%
-    @media $sl
-      width 80%
-    @media $sm
-      width 90.9375%
+    margin-top 30px
+    width 100%
+    // width 65.4166%
+    // @media $sl
+    //   width 80%
+    // @media $sm
+    //   width 90.9375%
+
+    &-smartphone
+      bottom 0
+      position absolute
+      right 0
+      width 32%
+
+    &-container
+      margin-left auto
+      margin-right auto
+      position relative
+      width 65.4166%
+
+      @media $sl
+        width 80%
+
+      @media $sm
+        width 90.9375%
+
+      &:before
+        content ""
+        display block
+        background-image url(../img/laptop-gif.gif)
+        background-repeat no-repeat
+        background-size contain
+        height 65%
+        left 0
+        margin 0 auto
+        position absolute
+        right 0
+        top 8%
+        width 66%
 
 .easy
   text-align center
   padding 0 12.3611% 66px 9.3055%
-  margin-top -20px
+  margin-top 20px
   position relative
   z-index 1
   overflow hidden
+  @media screen and (max-width: 1140px)
+    padding 0 5% 66px 5%
   @media $sl
     padding 0 5% 66px 5%
   @media $sm
@@ -128,11 +167,22 @@
     padding 0 0 10px 0
     span
       position relative
+      display inline-block
+
       img
         position absolute
+        // left: 0
         right 0
         bottom -10px
         width 60%
+
+        @media screen and (max-width: 576px)
+          bottom -2px
+          width 75%
+
+    @media screen and (max-width 576px)
+      line-height 30px
+
     @media $sl
       margin-top 20px
     @media $xs
@@ -153,7 +203,8 @@
     width 21.453%
     height 286px
     text-align left
-    @media $sl
+    // @media $sl
+    @media screen and (max-width: 1140px)
       flex-basis 23%
     @media screen and (max-width: 900px)
       flex-basis 34%
@@ -230,6 +281,11 @@
   &-btn
     margin-top 101px
     width 240px
+
+    &:hover
+      background-color #ffffff
+      color #3a45dd
+
     @media $xs
       display block
       width 100%
@@ -314,11 +370,13 @@
       letter-spacing 0px
   &-text
     font-family "Galano Grotesque"
-    font-size remify(18)
-    font-weight $medium
-    line-height 1.94
+    font-size remify(19)
+    // font-weight $medium
+    font-weight bold
+    line-height 1.3
     letter-spacing 0.5px
-    color #9b9b9b
+    // color #9b9b9b
+    color #2c2c2c
     margin 13.2px 0 0 0
     @media $sm
       font-size remify(16)
@@ -343,7 +401,7 @@
       margin-right 13px
     span
       font-family "Gotham"
-      font-size remify(21)
+      font-size remify(13)
       font-weight $medium
       line-height 1.67
       letter-spacing 0.6px
@@ -354,7 +412,7 @@
         color #2c2c2c
   &-grade
     font-family Gotham
-    font-size remify(16)
+    font-size remify(13)
     font-weight $medium
     line-height 2.19
     letter-spacing 0.5px
@@ -376,33 +434,57 @@
     justify-content space-between
     flex-wrap wrap
     @media $sm
-      justify-content space-around
+      align-items center
+      // justify-content space-around
     @media $xs
       margin 0
+
+    @media screen and (max-width 990px) and (min-width 520px)
+      max-width 400px !important
+
+    @media screen and (max-width 990px)
+      margin-left auto
+      margin-right auto
+      max-width 300px
+
   &-item
-    @media $sm
-      width 33.333%
-      text-align center
-      &:nth-child(n+4)
-        margin-top 17px
-    @media $xs
+    // @media $sm
+    // @media screen and (max-width 990px)
+    //   width 50%
+    //   text-align center
+    //   margin-bottom 40px
+
+    // @media $xs
+    @media screen and (max-width 990px) and (min-width 520px)
+      &:nth-child(1)
+        img
+          height 20px !important
+
+      img
+        height 20px !important
+    
+    @media screen and (max-width 990px)
       margin-top 0
       justify-content space-around
       width 45%
       text-align left
-      &:nth-child(3)
+      &:nth-child(1)
         img
-          width 75%
-      &:nth-child(5)
-        img
-          width 85%
+          height 15px
+
+      // &:nth-child(5)
+      //   img
+      //     width 85%
+
       &:nth-child(n+3)
         margin-top 17px
+
       &:last-child
         display none
       img
-        width 100%
-        height auto
+        // width 100%
+        // height auto
+        height 17px
 
 .patients
   background-color rgba(29, 41, 204, 0.84)
@@ -464,6 +546,11 @@
       text-align center
   &-btn
     margin-top 37px
+
+    &:hover
+      background-color transparent
+      color #ffffff
+
     @media $xs
       display block
       width 87.5%
