--- a/src/templates/seo/metatags.njk
+++ b/src/templates/seo/metatags.njk
@@ -1,15 +1,15 @@
 {% block meta %}
   <meta property="og:url" content="http://" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Comienza hoy a recetar | Prescrypto" />
+  <meta property="og:title" content="Comienza a recetar hoy | Prescrypto" />
   <meta property="og:description" content="Plataforma gratuita para generar y guardar recetas médicas" />
-  <meta property="og:image" content="http://" />
-  <meta property="og:image:width" content="" />
-  <meta property="og:image:height" content="" />
+  <meta property="og:image" content="https://blicklabs.github.io/prescrypto/img/seo-prescrypto.jpg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="799" />
 
-  <meta name="title" content="Comienza hoy a recetar | Prescrypto" />
+  <meta name="title" content="Comienza a recetar hoy | Prescrypto" />
   <meta name="description" content="Plataforma gratuita para generar y guardar recetas médicas" />
 
-  <link runat="server" rel="shortcut icon" href="img/favicon.png" type="image/x-icon"/>
-  <link runat="server" rel="icon" href="img/favicon.png" type="image/ico"/>
+  <link runat="server" rel="shortcut icon" href="img/prescrypto-favicon.png" type="image/x-icon"/>
+  <link runat="server" rel="icon" href="img/prescrypto-favicon.png" type="image/ico"/>
 {% endblock %}
