#3. Changes in the style sheet footer.styl

--- a/src/styl/partials/footer.styl
+++ b/src/styl/partials/footer.styl
@@ -23,10 +23,12 @@
       letter-spacing -0.3px
       margin-right 13px
   &-facebook
+    height 19px
     margin-right 31.7px
     @media $xs
       margin-right 15.4px
   &-twitter
+    height 17px
     margin-right 39px
     @media $xs
       margin-right 18px
