--- a/src/styl/sections/index.styl
+++ b/src/styl/sections/index.styl
@@ -21,7 +21,7 @@
       height 384px
   &-title
     margin 0
-    font-size remify(58)
+    font-size remify(62.7)
     font-weight $medium
     line-height 1.16
     letter-spacing -0.4px
@@ -35,7 +35,7 @@
         display block
   &-text
     margin 10px 0 0 0
-    font-size remify(20)
+    font-size remify(25.6)
     font-weight $medium
     line-height 2
     letter-spacing 0.4px
@@ -147,11 +147,13 @@
 
 .easy
   text-align center
-  padding 0 12.3611% 66px 9.3055%
+  padding 0 9.3055% 66px 9.3055%
   margin-top 20px
   position relative
   z-index 1
   overflow hidden
+  @media screen and (max-width: 1300px)
+    padding 0 5% 66px 5%
   @media screen and (max-width: 1140px)
     padding 0 5% 66px 5%
   @media $sl
@@ -200,9 +202,12 @@
       margin-top 0
   &-card
     background-color white
+    // background orange
     width 21.453%
-    height 286px
+    // height 286px
+    // height 440px
     text-align left
+    padding 32px 32px 39px 32px
     // @media $sl
     @media screen and (max-width: 1140px)
       flex-basis 23%
@@ -218,21 +223,21 @@
       justify-content center
       align-items center
     &:nth-child(1)
-      padding 32px 30px 39px 32px
+      // padding 32px 30px 39px 32px
       @media $xs
         padding 13px 18px 0 18px
         img
           width 82px
           height 49px
     &:nth-child(2)
-      padding 35px 14px 39px 34px
+      // padding 35px 14px 39px 34px
       @media $xs
         padding 13px 0 3px 0
         img
           width 43px
           height 45px
     &:nth-child(3)
-      padding 32px 4px 48px 36px
+      // padding 32px 4px 48px 36px
       @media screen and (max-width: 900px)
         margin-top 30px
       @media $xs
@@ -242,7 +247,7 @@
           width 45px
           height 49px
     &:nth-child(4)
-      padding 26px 9px 17px 31px
+      // padding 26px 9px 17px 31px
       @media screen and (max-width: 900px)
         margin-top 30px
       @media $xs
@@ -253,7 +258,8 @@
           height 59px
     &-title
       font-family "Galano Grotesque"
-      font-size remify(20)
+      // font-size remify(20)
+      font-size remify(33)
       font-weight $medium
       line-height 1.9
       letter-spacing 0.3px
@@ -261,6 +267,7 @@
       margin-top 31px
       @media $lg
         margin-top 15px
+        font-size remify(18)
       @media $xs
         margin-top 0
         font-size remify(15)
@@ -268,7 +275,8 @@
         letter-spacing 0.3px
     &-text
       font-family "Glacial Indifference"
-      font-size remify(15)
+      // font-size remify(15)
+      font-size remify(24)
       font-weight $normal
       line-height 1.44
       letter-spacing 0.3px
@@ -279,6 +287,7 @@
       @media $xs
         display none
   &-btn
+    font-size remify(17px)
     margin-top 101px
     width 240px
 
@@ -370,7 +379,7 @@
       letter-spacing 0px
   &-text
     font-family "Galano Grotesque"
-    font-size remify(19)
+    font-size remify(20.8)
     // font-weight $medium
     font-weight bold
     line-height 1.3
@@ -545,6 +554,7 @@
       letter-spacing 0.5px
       text-align center
   &-btn
+    font-size remify(17px)
     margin-top 37px
 
     &:hover
