--- a/src/templates/sections/index.njk
+++ b/src/templates/sections/index.njk
@@ -34,7 +34,8 @@
           Elige
         </div>
         <div class="easy-card-text">
-          Un gran catálogo <br>de medicamentos <br>está a tu disposición.
+          <!-- Un gran catálogo <br>de medicamentos <br>está a tu disposición. -->
+          Un gran catálogo de medicamentos está a tu disposición.
         </div>
       </div>
       <div class="easy-card">
@@ -45,7 +46,8 @@
           Guarda
         </div>
         <div class="easy-card-text">
-          Todas tus recetas emitidas<br>se almacenan en tu historial<br>para fácil acceso.
+          <!-- Todas tus recetas emitidas<br>se almacenan en tu historial<br>para fácil acceso. -->
+          Todas tus recetas emitidas se almacenan en tu historialpara fácil acceso.
         </div>
       </div>
       <div class="easy-card">
@@ -56,7 +58,8 @@
           Genera
         </div>
         <div class="easy-card-text">
-          Plantillas para tus recetas más<br>comunes o las menos frecuentes.
+          <!-- Plantillas para tus recetas más<br>comunes o las menos frecuentes. -->
+          Plantillas para tus recetas más comunes o las menos frecuentes.
         </div>
       </div>
       <div class="easy-card">
@@ -67,7 +70,8 @@
           Protege
         </div>
         <div class="easy-card-text">
-          La información de tus <br>recetas queda segura<br>con nuestra tecnología.
+          <!-- La información de tus <br>recetas queda segura<br>con nuestra tecnología. -->
+          La información de tus recetas queda segura con nuestra tecnología.
         </div>
       </div>
     </div>
